--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.10.0",
+    "npm": "2.14.3"
   },
   "author": "",
   "license": "MIT",
