--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build --environment=production --port=${PORT}",
+    "build": "ember build ",
     "start": "ember server",
     "test": "ember test"
   },
