--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
+    "bower":"1.13.12",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
@@ -38,5 +39,6 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-django-adapter": "1.1.0",
     "ember-export-application-global": "^1.0.3"
+   
   }
 }
